docs/development/process/time-logs/version/v0.3.4b/README.md
# v0.3.4b Time Logs

Time tracking for v0.3.4b (Hybrid Search & Query Optimisation).

## Purpose

Actual hours spent implementing v0.3.4b features.

## Contents

Time tracking files for v0.3.4b (when created).

## What Belongs Here

- Time tracking for v0.3.4b implementation
- Actual hours by feature and task
- Estimate vs actual comparisons
- Time allocation and analysis

## What Doesn't Belong Here

- **Development narratives** → See `../../devlogs/version/v0.3.4b/`
- **Implementation specifications** → See `../../../implementation/version/v0.3/v0.3.4b/`
- **Roadmap estimates** → See `../../../roadmap/version/v0.3/v0.3.4b.md`

## Related Documentation

- [v0.3.4b Development Logs](../../devlogs/version/v0.3.4b/) - Daily development narratives
- [v0.3.4b Implementation](../../../implementation/version/v0.3/v0.3.4b/) - Technical record
- [Time Logs Overview](../../README.md) - All time tracking

---
